--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
         <ul>
             <li><a href="/authors">Authors</a></li>
             <li><a href="/authors/new">Agregar Authors</a></li>
+            <li><a href="/books">Libros</a></li>
+            <li><a href="/books/new">Agregar libros</a></li>
         </ul>
     </nav>
 </header>
