--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,5 +1,5 @@
 <h2>Agregar Libro</h2>
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST">
     <%- include('_form_fields')  %>
     <a href="/books">Cancelar</a>
     <button type="submit">Crear</button>
