--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Editar autor</h2>
+<h2 class="page-header">Editar autor</h2>
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
     <%- include('_form_fields')  %>
     <a href="/authors/<%= author.id %>">Cancelar</a>
