--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>Buscar autores</h2>
+<h2 class="page-header">Buscar autores</h2>
 <form action="/authors" method="GET">
    <label>Nombre</label>
     <input type="text" name="name" value="<%= searchOptions.name %>">
@@ -7,9 +7,10 @@
 <br>
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>  
-    <a href="/authors/<%= author.id %>">Vista</a>
-    <a href="/authors/<%= author.id %>/edit">Editar</a>
+    <div class="btn-row">
+    <a class="btn btn-primary" href="/authors/<%= author.id %>">Vista</a>
+    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Editar</a>
     <%- include('../partials/deleteForm',
                   { url: `/authors/${author.id}` }) %>
-
+    </div>
 <% }) %>
