--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,4 +1,4 @@
-<h2>Agregar autor</h2>
+<h2 class="page-header">Agregar autor</h2>
 <form action="/authors" method="POST">
     <%- include('_form_fields')  %>
     <a href="/authors">Cancelar</a>
