--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,5 +1,5 @@
-<h2><%= book.title %></h2>
-<img width="100" height="150" src="<%= book.coverImagePath %>">
+<h2 class="page-header"><%= book.title %></h2>
+<img width="200" height="300" src="<%= book.coverImagePath %>">
 <div>Author: <%= book.author.name %></div>
 <div>Publish Date: <%= book.publishDate.toDateString() %></div>
 <div>Page Count: <%= book.pageCount %></div>
