--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header>
-    <nav>
-        <a href="/">Mi Bliblioteca</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">Mi Bliblioteca</a>
         <ul>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Agregar Authors</a></li>
-            <li><a href="/books">Libros</a></li>
-            <li><a href="/books/new">Agregar libros</a></li>
+            <li class="header-link"><a href="/authors">Authors</a></li>
+            <li class="header-link"><a href="/authors/new">Agregar Authors</a></li>
+            <li class="header-link"><a href="/books">Libros</a></li>
+            <li class="header-link"><a href="/books/new">Agregar libros</a></li>
         </ul>
     </nav>
 </header>
