--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,23 +1,29 @@
-<h2 class="page-header">Buscar libros</h2>
+<h2 class="page-header">Search Book</h2>
 <form action="/books" method="GET">
-    <div>
-        <label>Titulo</label>
-        <input type="text" name="title" value="<%= searchOptions.title %>">
+  <div class="form-row">
+    <div class="form-item">
+      <label>Title</label>
+      <input type="text" name="title" value="<%= searchOptions.title %>">
     </div>
-    <div>
-        <label>Publish After</label>
-        <input type="date" name="publishedAfter" value="<%= searchOptions.publishAfter %>">
+  </div>
+  <div class="form-row">
+    <div class="form-item">
+      <label>Published After</label>
+      <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
     </div>
-    <div>
-        <label>Publish Before</label>
-        <input type="date" name="publishedBefore" value="<%= searchOptions.publishBefore %>">
-    </div> 
-    <button type="submit">Search</button>
+    <div class="form-item">
+      <label>Published Before</label>
+      <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
+    </div>
+  </div>
+  <div class="form-row form-row-end">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </div>
 </form>
 <div>
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height="300" width="200" src="<%= book.coverImagePath %>">
-          </a>
-    <% }) %>
+  <% books.forEach(book => { %>
+    <a href="/books/<%= book.id %>">
+      <img height="150" width="100" src="<%= book.coverImagePath %>">
+    </a>
+  <% }) %>
 </div>
