--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,6 +1,8 @@
-<h2 class="page-header">Agregar Libro</h2>
+<h2 class="page-header">New Book</h2>
 <form action="/books" method="POST">
-    <%- include('_form_fields')  %>
-    <a href="/books">Cancelar</a>
-    <button type="submit">Crear</button>
+  <%- include('_form_fields') %>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/books">Cancel</a>
+    <button class="btn btn-primary" type="submit">Create</button>
+  </div>
 </form>
