--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,2 @@
-<h2 class="page-header">Agregados recientemente</h2>
-<div>
-  <% books.forEach(book => { %>
-    <a href="/books/<%= book.id %>">
-      <img height="300" width="200" src="<%= book.coverImagePath %>">
-    </a>
-  <% }) %>
-</div>
+<h2 class="page-header">Recently Added</h2>
+<%- include('partials/bookGrid', { books: books, large: true }) %>
