--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,3 @@
-<h2 class="page-header">Recently Added</h2>
-<%- include('partials/bookGrid', { books: books, large: true }) %>
+ <!-- Igual muestra los videojuegos con el videogam grid-->
+<h2 class="page-header">Recientemente Agregados</h2>
+<%- include('partials/videogameGrid', { videogames: videogames, large: true }) %>
