--- a/views/partials/errorMessage.ejs
+++ b/views/partials/errorMessage.ejs
@@ -1,3 +1,4 @@
+ <!-- Mensaje de error que se encuentra en cada interfaz-->
 <% if (locals.errorMessage != null) { %>
     <div class="error-message"><%= errorMessage %></div>
   <% } %>
