--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,39 @@
-<header>
-    <nav class="header-nav">
-        <a class="header-title" href="/">Mi Bliblioteca</a>
-        <ul>
-            <li class="header-link"><a href="/authors">Authors</a></li>
-            <li class="header-link"><a href="/authors/new">Agregar Authors</a></li>
-            <li class="header-link"><a href="/books">Libros</a></li>
-            <li class="header-link"><a href="/books/new">Agregar libros</a></li>
+     <!-- Menu desplegable-->
+    <div class="sidebar">
+        <div class="logo_details">
+            <img id="logo" class="icon" src="/Imagenes/icon.png" alt="-">
+            <div class="logo_name">Vigzone</div> 
+            <i class="bx bx-menu" id="btn"></i>
+        </div>
+         <!-- Cada uno de los elemento que mandan a cada una de las interfaces-->
+        <ul class="nav-list">
+            <li>
+                <a href="/developers"> 
+                    <img class="img-menu" src="/Imagenes/developer.png" alt="-">
+                    <span class="link_name">Desarrolladora</span>
+                </a>
+                <span class="tooltip">Desarrolladora</span>
+            </li>
+            <li>
+                <a href="/developers/new"> 
+                    <img class="img-menu" src="/Imagenes/newDeveloper.png" alt="-">
+                    <span class="link_name">N. Desarrolladora</span>
+                </a>
+                <span class="tooltip">Nueva Desarrolladora</span>
+            </li>
+            <li>
+                <a href="/videogames"> 
+                    <img class="img-menu" src="/Imagenes/mando.png" alt="-">
+                    <span class="link_name">Videojuegos</span>
+                </a>
+                <span class="tooltip">Videojuegos</span>
+            </li>
+            <li>
+                <a href="/videogames/new"> 
+                    <img class="img-menu" src="/Imagenes/mas.png" alt="-">
+                    <span class="link_name">N. Videojuego</span>
+                </a>
+                <span class="tooltip">Nuevo Videojuego</span>
+            </li>
         </ul>
-    </nav>
-</header>
+    </div>
