--- a/views/partials/deleteForm.ejs
+++ b/views/partials/deleteForm.ejs
@@ -1,3 +1,4 @@
+ <!-- Estrucura para eliminar un registro-->
 <form method="POST" action="<%= url %>?_method=DELETE">
-    <button  class="btn btn-danger" type="submit">Delete</button>
+    <button  class="btn btn-danger" type="submit">Eliminar</button>
 </form>
